# csvToJson

./: .gitignore  01-simple-order.csv  02-european-invoice.csv  03-header-offset.csv  04-multi-table.csv  05-multi-sheet.xlsx  06-dirty-data.csv  07-nested-packing.csv  08-large-courier-export.csv  09-shipping-tariff.csv  README.md  pyproject.toml
docs/: FUNZIONAMENTO_PROGRAMMA.md
docs/superpowers/plans/: 2026-04-05-multi-sheet-resolver.md
docs/superpowers/specs/: 2026-04-03-quoro-tabular-extractor-design.md
schemas/: export_spedizioni.yaml  fattura.yaml  ordine.yaml  packing_list.yaml  tariffario.yaml
src/quoro/: __init__.py  cli.py  models.py
src/quoro/analyzer/: __init__.py  structural_analyzer.py
src/quoro/normalizer/: __init__.py  normalizer.py
src/quoro/reader/: __init__.py  csv_reader.py  excel_reader.py
src/quoro/resolver/: __init__.py  multi_sheet_resolver.py  schema_loader.py  semantic_resolver.py  static_resolver.py
tests/: test_analyzer.py  test_integration.py  test_multi_sheet_resolver.py  test_normalizer.py  test_reader.py  test_resolver.py
tests/fixtures/: 01-simple-order.expected.json  02-european-invoice.expected.json  03-header-offset.expected.json  04-multi-table.expected.json  06-dirty-data.expected.json  07-nested-packing.expected.json  09-shipping-tariff.expected.json
web/: app.py  index.html
